--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <!-- Header -->
-     <header>
+    <header>
         <!-- Qui inserisco la barra fissa con Sony-->
         <!-- Header (DA PERSONALIZZARE)-->
         <nav class="navbar navbar-expand-lg bg-body-light">
@@ -140,24 +140,119 @@
                 </div>
             </div>
         </nav>
-     </header>
+    </header>
 
+    <main>
     <!-- Jumbotron & Highlight contents -->
+     <section id="Highlight">
+        <div class="main-jumbo mb-4">
+            <div class="container">
+              <div class="main-jumbo-contents">
+              </div>
+            </div>
+        </div>
+
+        <div class="container">
+            <div class="Highlight-card-wrapper d-flex justify-content-between mb-5">
+                <div class="debug highlight-card"></div>
+                <div class="debug highlight-card"></div>
+                <div class="debug highlight-card"></div>
+                <div class="debug highlight-card"></div>
+                <div class="debug highlight-card"></div>
+                <div class="debug highlight-card"></div>
+            </div>
+        </div>
+     </section>
+
 
     <!-- Section PS-Shower -->
+     <section id="PS-Shower">
+        <div class="container">
+            <div class="PS-Shower-titles text-center ">
+                <h4>PLAY HAS NO LIMITS</h4>
+                <h2>Ecco la Playstation 5</h2>
+                <p>Tuffati in nuove possibilità di gioco completamente inaspettate</p>
+            </div>
 
+            <div class="row align-items-center">
+                <div class="col">
+                    <h3>Console Playstation 5</h3>
+                    <p>Sperimenta la nuova generazione di incredibili giochi Playstation.</p>
+                </div>
+            <div class="col">
+                <img style="width: 500px;" src="./img/playstation-5-thumb.png" alt="Playstation 5" title="Console Playstation 5">
+            </div>
+            </div>
+
+            <div class="Highlight-card-wrapper d-flex justify-content-between mb-5">
+                <div class="debug ps-shower-card"></div>
+                <div class="debug ps-shower-card"></div>
+                <div class="debug ps-shower-card"></div>
+                <div class="debug ps-shower-card"></div>
+                <div class="debug ps-shower-card"></div>
+            </div>
+       </div>    
+     </section>
     <!-- Section New Titles-->
+    <section id="new-titles">
+        <div class="new-titles-jumbo mb-4">
+            <div class="container">
+              <div class="new-title-jumbo-contents">
+              </div>
+            </div>
+        </div>
+
+        <div class="container">
+            
+        </div>
+     </section>
 
     <!-- Section Explore -->
+     <section id="explore">
+        <div class="container">
+            <div class="explore-titles text-center">
+            <h3>Esplora Playtstation&trade; 4;</h3>
+            <p>Giochi incredibili e intrattenimento senza fine. <br>
+               Non c'è mai stato un momento migliore per giocare sulla tua PS4. </p>
+            </div>
+
+            <div class="row row-cols-3 mb-5">
+                <div class="debug">
+                    <h4>PlayStation 4</h4>
+                    <p>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
+                    <button class="btn btn-primary">Scopri di più</button>
+                </div>
+                <div class="debug"></div>
+                <div class="debug"></div>
+            </div>
+        </div>
+     </section>
 
     <!-- Section PS-Store-->
+     <section id="ps-store">
+        <div class="container">
+            <div class="row row-cols-2 align-items-center mb-5">
+                <div>
+                    <h2>PlayStation Plus</h2>
+                    <p>Migliora la tua esperienza PlayStation con la'ccesos a multigiocatore online,
+                        giochi mensili, sconti esclusivi e altro ancora.
+                    </p>
+                    <button class="btn btn-primary">Esplora PlayStation Plus</button> <!-- Poi cambio colore e forma-->
+                </div>
+                <div> 
+                    <img style="height: 400px;" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                </div>
+            </div>
+
+        </div>
+
 
     <!-- Section Social-->
 
     <!-- Footer -->
     
 
-
+    </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>    
 </body>
 </html>
