--- a/index.html
+++ b/index.html
@@ -243,9 +243,39 @@
                     <img style="height: 400px;" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
                 </div>
             </div>
+        </div>
+     </section>
 
+    <!-- Discount section -->
+     <section id="discount" class="container">
+        <div class="discount-titles text-center">
+            <h2>Nuovi sconti sul PlayStation Store</h2>
+            <p>Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
         </div>
 
+        <div class="row row-cols-3 mb-5">
+            <div class="debug"></div>
+            <div class="debug"></div>
+            <div class="debug"></div>
+        </div>
+     </section>
+
+     <!-- PS-NOW section -->
+      <section id="ps-now">
+        <div class="container">
+            <div class="row row-cols-2 align-items-center mb-5">
+                <div>
+                    <h2>PlayStation Now</h2>
+                    <p>Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3 e PS2 su PS4 o PC Windows, con nuovi titoli aggiunti ogni mese.
+                    </p>
+                    <button class="btn btn-light">Esplora PlayStation Plus</button> <!-- Poi cambio colore e forma-->
+                </div>
+                <div> 
+                    <img style="height: 400px;" src="./img/ps-now-april-featured-image-block.png" alt="">
+                </div>
+            </div>
+        </div>
+     </section>
 
     <!-- Section Social-->
 
