Add social section layout and footer (debug preview)

--- a/index.html
+++ b/index.html
@@ -278,11 +278,23 @@
      </section>
 
     <!-- Section Social-->
-
+     <section id="social-networks" class="container text-center">
+        <h3>Seguici sui social media</h3>
+        <div class="row row-cols-4">
+            <div class="debug"></div>
+            <div class="debug"></div>
+            <div class="debug"></div>
+            <div class="debug"></div>
+        </div>
+        </div>
+     </section>
+ </main>
     <!-- Footer -->
-    
+     <footer class="text-bg-primary debug">
 
-    </main>
+     </footer>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>    
 </body>
 </html>
