Fix highlights grid

--- a/index.html
+++ b/index.html
@@ -153,15 +153,39 @@
         </div>
 
         <div class="container">
-            <div class="Highlight-card-wrapper d-flex justify-content-between mb-5">
-                <div class="debug highlight-card"></div>
-                <div class="debug highlight-card"></div>
-                <div class="debug highlight-card"></div>
-                <div class="debug highlight-card"></div>
-                <div class="debug highlight-card"></div>
-                <div class="debug highlight-card"></div>
+            <div class="row row-cols-6 gx-5 mb-5">
+                <div class="col">
+                    <div class="border border-2 rounded-4 border-primary">
+                        <img class="img-fluid rounded-4 p-1" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal-game-cover">
+                    </div>
+                </div>
+                    <div class="col">
+                   <div class="border border-2 rounded-4 border-primary"> 
+                        <img class="img-fluid rounded-4 p-1" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal-game-cover">
+                    </div>
+                </div>
+                    <div class="col">
+                    <div class="border border-2 rounded-4 border-primary">
+                        <img class="img-fluid rounded-4 p-1" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal-game-cover">
+                    </div>
+                </div>
+                    <div class="col">
+                    <div class="border border-2 rounded-4 border-primary">
+                        <img class="img-fluid rounded-4 p-1" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal-game-cover">
+                    </div>
+                </div>
+                    <div class="col">
+                    <div class="border border-2 rounded-4 border-primary">
+                        <img class="img-fluid rounded-4 p-1" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal-game-cover">
+                    </div>
+                </div>
+                    <div class="col">
+                   <div class="border border-2 rounded-4 border-primary">
+                        <img class="img-fluid rounded-4 p-1" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="Returnal-game-cover">
+                    </div>
+                </div>
             </div>
-        </div>
+
      </section>
 
 
@@ -289,6 +313,7 @@
         </div>
      </section>
  </main>
+
     <!-- Footer -->
      <footer class="text-bg-primary debug">
 
