Add new titles grid

--- a/index.html
+++ b/index.html
@@ -208,17 +208,37 @@
             </div>
             </div>
 
-            <div class="Highlight-card-wrapper d-flex justify-content-between mb-5">
-                <div class="debug ps-shower-card"></div>
-                <div class="debug ps-shower-card"></div>
-                <div class="debug ps-shower-card"></div>
-                <div class="debug ps-shower-card"></div>
-                <div class="debug ps-shower-card"></div>
-            </div>
+        <!-- Sistemare grandezza immagini, bordo solo in hover e opacità -->
+           <div class="row row-cols-5 gx-5 mb-5">
+                <div class="col">
+                    <div class="border-bottom border-2 border-primary">
+                        <img class="img-fluid rounded-4 p-1" src="./img/playstation-5-thumb.png" alt="Returnal-game-cover">
+                    </div>
+                </div>
+                    <div class="col">
+                   <div class="border-bottom border-2 border-primary"> 
+                        <img class="img-fluid rounded-4 p-1" src="./img/joypad-thumb.png" alt="Returnal-game-cover">
+                    </div>
+                </div>
+                    <div class="col">
+                    <div class="border-bottom border-2 border-primary">
+                        <img class="img-fluid rounded-4 p-1" src="./img/headset-thumb.png" alt="Returnal-game-cover">
+                    </div>
+                </div>
+                    <div class="col">
+                    <div class="border-bottom border-2 border-primary">
+                        <img class="img-fluid rounded-4 p-1" src="./img/remote-thumb.png" alt="Returnal-game-cover">
+                    </div>
+                </div>
+                    <div class="col">
+                    <div class="border-bottom border-2 border-primary">
+                        <img class="img-fluid rounded-4 p-1" src="./img/camera-thumb.jpg" alt="Returnal-game-cover">
+                    </div>
+                </div>
        </div>    
      </section>
     <!-- Section New Titles-->
-    <section id="new-titles">
+    <section id="new-titles" class="pb-5 mb-5">
         <div class="new-titles-jumbo mb-4">
             <div class="container">
               <div class="new-title-jumbo-contents">
@@ -227,6 +247,82 @@
         </div>
 
         <div class="container">
+            <h3>Nuove uscite</h3>
+            <p>Giochi incredibili per PS4 e PS5 disponibili ora</p>
+            <div class="row row-cols-12 g-2">
+                <div class="col-2">
+                    <div>
+                        <img class="img-fluid rounded-5 p-1" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Returnal-game-cover">
+                        <h6>Crash Bandicoot 4: it's About Time!</h5>
+                    </div>
+                </div>
+                <div class="col-2">
+                   <div>
+                        <img class="img-fluid rounded-5 p-1" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Returnal-game-cover">
+                        <h6>Crash Bandicoot 4: it's About Time!</h5>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div>
+                        <img class="img-fluid rounded-5 p-1" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Returnal-game-cover">
+                        <h6>Crash Bandicoot 4: it's About Time!</h5>
+                    </div>
+                </div>
+                <div class="col-2">
+                   <div>
+                        <img class="img-fluid rounded-5 p-1" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Returnal-game-cover">
+                        <h6>Crash Bandicoot 4: it's About Time!</h5>
+                    </div>
+                </div>
+                <div class="col-2">
+                   <div>
+                        <img class="img-fluid rounded-5 p-1" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Returnal-game-cover">
+                        <h6>Crash Bandicoot 4: it's About Time!</h5>
+                    </div>
+                </div>
+                <div class="col-2">
+                   <div>
+                        <img class="img-fluid rounded-5 p-1" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Returnal-game-cover">
+                        <h6>Crash Bandicoot 4: it's About Time!</h5>
+                    </div>
+                </div>
+                <div class="col-2">
+                    <div>
+                        <img class="img-fluid rounded-5 p-1" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Returnal-game-cover">
+                        <h6>Crash Bandicoot 4: it's About Time!</h5>
+                    </div>
+                </div>
+                <div class="col-2">
+                   <div>
+                        <img class="img-fluid rounded-5 p-1" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Returnal-game-cover">
+                        <h6>Crash Bandicoot 4: it's About Time!</h5>
+                    </div>
+                </div>
+                <div class="col-2">
+                   <div>
+                        <img class="img-fluid rounded-5 p-1" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Returnal-game-cover">
+                        <h6>Crash Bandicoot 4: it's About Time!</h5>
+                    </div>
+                </div>
+                <div class="col-2">
+                   <div>
+                        <img class="img-fluid rounded-5 p-1" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Returnal-game-cover">
+                        <h6>Crash Bandicoot 4: it's About Time!</h5>
+                    </div>
+                </div>
+                <div class="col-2">
+                   <div>
+                        <img class="img-fluid rounded-5 p-1" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Returnal-game-cover">
+                        <h6>Crash Bandicoot 4: it's About Time!</h5>
+                    </div>
+                </div>
+                <div class="col-2">
+                   <div>
+                        <img class="img-fluid rounded-5 p-1" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="Returnal-game-cover">
+                        <h6>Crash Bandicoot 4: it's About Time!</h5>
+                    </div>
+                </div>
+            </div>    
             
         </div>
      </section>
@@ -240,15 +336,34 @@
                Non c'è mai stato un momento migliore per giocare sulla tua PS4. </p>
             </div>
 
-            <div class="row row-cols-3 mb-5">
-                <div class="debug">
-                    <h4>PlayStation 4</h4>
-                    <p>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione.</p>
-                    <button class="btn btn-primary">Scopri di più</button>
+
+            <!-- Personalizzare le varie colonne con testi giusti-->
+            <div class="row row-cols-3 gx-5 mb-5">
+                <div class="col">
+                    <div>
+                        <img class="img-fluid rounded-4 p-1" src="./img/ps4-slim-homepage-image-block.jpg" alt="Returnal-game-cover">
+                        <h3>PlayStation 4</h3>
+                        <p>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione</p>
+                        <button class="btn btn-primary">Scopri di più</button>
+                    </div>
                 </div>
-                <div class="debug"></div>
-                <div class="debug"></div>
-            </div>
+                    <div class="col">
+                   <div> 
+                        <img class="img-fluid rounded-4 p-1" src="./img/double11-202010-tw-psvr.jpg" alt="Returnal-game-cover">
+                        <h3>PlayStation 4</h3>
+                        <p>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione</p>
+                        <button class="btn btn-primary">Scopri di più</button>
+                    </div>
+                </div>
+                    <div class="col">
+                    <div>
+                        <img class="img-fluid rounded-4 p-1" src="./img/dualshock-4-listing-thumb.jpg" alt="Returnal-game-cover">
+                        <h3>PlayStation 4</h3>
+                        <p>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione</p>
+                        <button class="btn btn-primary">Scopri di più</button>
+                    </div>
+                </div>
+            </div>    
         </div>
      </section>
 
@@ -277,11 +392,23 @@
             <p>Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
         </div>
 
-        <div class="row row-cols-3 mb-5">
-            <div class="debug"></div>
-            <div class="debug"></div>
-            <div class="debug"></div>
-        </div>
+        <div class="row row-cols-3 gx-5 mb-5">
+                <div class="col">
+                    <div>
+                        <img class="img-fluid" src="./img/playstation-store-games-under-20-spotlight.jpg" alt="Returnal-game-cover">
+                    </div>
+                </div>
+                    <div class="col">
+                   <div> 
+                        <img class="img-fluid" src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="Returnal-game-cover">
+                    </div>
+                </div>
+                    <div class="col">
+                    <div>
+                        <img class="img-fluid" src="./img/playstation-store-free-to-play-spotlight.png" alt="Returnal-game-cover">
+                    </div>
+                </div>
+            </div>    
      </section>
 
      <!-- PS-NOW section -->
@@ -301,22 +428,71 @@
         </div>
      </section>
 
-    <!-- Section Social-->
+    <!-- Section Social--> <!-- SISTEMARE GRANDEZZE -->
      <section id="social-networks" class="container text-center">
         <h3>Seguici sui social media</h3>
-        <div class="row row-cols-4">
-            <div class="debug"></div>
-            <div class="debug"></div>
-            <div class="debug"></div>
-            <div class="debug"></div>
-        </div>
-        </div>
+        <div class="row row-cols-4 mb-5 justify-content-center">
+                <div class="col-2">
+                        <img class="img-fluid" src="./img/twitter.jpg" alt="Returnal-game-cover">
+                </div>
+                    <div class="col-2">
+                        <img class="img-fluid" src="./img/facebook.jpg" alt="Returnal-game-cover">
+                </div>
+                    <div class="col-2">
+                        <img class="img-fluid" src="./img/instagram.jpg" alt="Returnal-game-cover">
+                </div>
+                <div class="col-2">
+                        <img class="img-fluid" src="./img/youtube.png" alt="Returnal-game-cover">
+                </div>
+            </div>    
      </section>
  </main>
 
     <!-- Footer -->
-     <footer class="text-bg-primary debug">
-
+     <footer>
+        <div class="container py-4">
+            <div class="row row-cols-2">
+                <div class="col">
+                    <img class="img-fluid mb-4" src="./img/ps-footer.svg" alt="">
+                    <p class="mb-5"><i class="bi bi-globe"></i> Country / Region: Italy</p>
+                    <img class="mb-3" style="height: 50px;" class="img-fluid" src="./img/sie-logo.svg" alt="">
+                    <p>Website &copy;2001 Sony Interactive Entertainment Europe Limited. tutti i contenuti, 
+                       nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafiac e immagini associati
+                       sono marhci registrati e/o materiale protetto da copyright dei
+                       rispettivi proprietari. Tutti i diritti riservati. <span>Maggiori info</span>
+                    </p>
+                </div>
+                <div class="col">
+                    <div class="row row-cols-3">
+                        <div>
+                            <ul>
+                                <li>Item</li>
+                                <li>Item</li>
+                                <li>Item</li>
+                                <li>Item</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul>
+                                <li>Item</li>
+                                <li>Item</li>
+                                <li>Item</li>
+                                <li>Item</li>
+                            </ul>
+                        </div>
+                        <div>
+                            <ul>
+                                <li>Item</li>
+                                <li>Item</li>
+                                <li>Item</li>
+                                <li>Item</li>
+                            </ul>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
      </footer>
 
 
