--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
     </header>
 
     <main>
-        <section id="new-contents">
-            <div class="main-jumbo">
+        <!-- Sezione highlight -->
+        <section id="highlight">
+            <div class="highlight-jumbo">
                 <div class="container>">
                     <div class="main-jumbo-contents">
                       <!-- Qui inserisco i contenuti del jumbo -->
@@ -61,7 +62,7 @@
                 </div>
             </div>
 
-            <div class="container mt-4">
+            <div class="container my-4">
                 <div class="row gy-4">
                     <div class="col-4">
                         <div class="debug"></div>
@@ -84,6 +85,99 @@
                 </div>
             </div>
         </section>
+
+        <!-- Sezione Esplora -->
+         <section id="explore">
+            <div class="container my-4">
+                <h5>PLAY HAS NO LIMITS</h5>
+                <h2>Ecco la PlayStation 5</h2>
+                <p>Tuffati in nuove possibilità di gioco compeltamente inaspettate</p>
+
+                <div class="row g-2">
+                    <div class="col-12">
+                        <div class="debug">
+                            <h2>Console PlayStation 5</h2>
+                            <p>Sperimenta la nuova generazione di incredibili giochi PlayStation</p>
+                            <button class="btn btn-primary">Maggiori informazioni</button>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="debug"></div>
+                    </div>
+                </div>
+
+                <div class="row g-2 my-4 ">
+                    <div class="col-4">
+                        <div class="debug"></div>
+                    </div>
+                    <div class="col-4">
+                        <div class="debug"></div>
+                    </div>
+                    <div class="col-4">
+                        <div class="debug"></div>
+                    </div>
+                    <div class="col-4">
+                        <div class="debug"></div>
+                    </div>
+                    <div class="col-4">
+                        <div class="debug"></div>
+                    </div>
+                </div>
+            </div>
+         </section>
+
+         <!-- Sezione nuove uscite -->
+          <section id="new-publications" class="mb-4">
+            <div class="new-publications-jumbo">
+                <div class="container>">
+                    <div class="new-publications-jumbo-contents">
+                      <!-- Qui inserisco i contenuti del jumbo -->
+                    </div>
+                </div>
+            </div>
+
+            <h3>Nuove uscite</h3>
+            <p>Giochi incredibili per PS4 e PS5 disponibili ora</p>
+            <div class="row g-2">
+                <div class="col-4">
+                    <div class="debug"></div>
+                </div>
+                <div class="col-4">
+                    <div class="debug"></div>
+                </div>
+                <div class="col-4">
+                    <div class="debug"></div>
+                </div>
+                <div class="col-4">
+                    <div class="debug"></div>
+                </div>
+                <div class="col-4">
+                    <div class="debug"></div>
+                </div>
+                <div class="col-4">
+                    <div class="debug"></div>
+                </div>
+                <div class="col-4">
+                    <div class="debug"></div>
+                </div>
+                <div class="col-4">
+                    <div class="debug"></div>
+                </div>
+                <div class="col-4">
+                    <div class="debug"></div>
+                </div>
+                <div class="col-4">
+                    <div class="debug"></div>
+                </div>
+                <div class="col-4">
+                    <div class="debug"></div>
+                </div>
+                <div class="col-4">
+                    <div class="debug"></div>
+                </div>
+            </div>
+
+
     </main>
     
 
