--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
             </div>
         </section>
 
-        <!-- Sezione Esplora -->
-         <section id="explore">
+        <!-- Sezione Discover -->
+         <section id="discover">
             <div class="container my-4">
                 <h5>PLAY HAS NO LIMITS</h5>
                 <h2>Ecco la PlayStation 5</h2>
@@ -127,7 +127,7 @@
          </section>
 
          <!-- Sezione nuove uscite -->
-          <section id="new-publications" class="mb-4">
+         <section id="new-publications" class="pb-4">
             <div class="new-publications-jumbo">
                 <div class="container>">
                     <div class="new-publications-jumbo-contents">
@@ -176,9 +176,141 @@
                     <div class="debug"></div>
                 </div>
             </div>
+         </section>
 
+         <!-- Sezione Explora-->
+         <section id="explore">
+            <div class="container">
+                <h2>Esplora Playstation&copy; 4</h2>
+                <p>Giochi incredibili e intrattenimento senza fine.
+                Non c'è mai stato un momento migliore per giocare sulla tua PS4
+                </p>
 
+                <div class="row g-4">
+                    <div class="col-12">
+                        <div class="debug"></div>
+                    </div>
+                    <div class="col-12">
+                        <div class="debug"></div>
+                    </div>
+                    <div class="col-12">
+                        <div class="debug"></div>
+                    </div>
+                </div>
+            </div>
+         </section>
+
+         <!-- Sezione PS-Plus-->
+         <section id="ps-plus">
+            <div class="container">
+                <div class="row row-cols-2 g-0">
+                    <div>
+                        <div class="debug"></div>
+                    </div>
+                    <div>
+                        <div class="debug"></div> <!-- L'immagine compare da md in poi-->
+                    </div>
+                </div>
+            </div>
+         </section>
+
+        <!-- Sezione sconti -->
+         <section id="discount">
+            <div class="container">
+                <h2>Nuovi sconti sul PlayStation Store</h2>
+                <p>Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto</p>
+
+                <div class="row g-2">
+                    <div class="col-12">
+                        <div class="debug"></div>
+                    </div>
+                    <div class="col-12">
+                        <div class="debug"></div>
+                    </div>
+                    <div class="col-12">
+                        <div class="debug"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Sezione PS-Now -->
+        <section id="ps-now">
+            <div class="container mb-4">
+                <div class="row row-cols-2 g-0 ">
+                    <div>
+                        <div class="debug"></div>
+                    </div>
+                    <div>
+                        <div class="debug"></div> <!-- L'immagine compare da md in poi-->
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Sezione Social media -->
+         <section id="social-media">
+            <div class="container mb-4">
+                <div class="row row-cols-4">
+                    <div>
+                        <div class="debug"></div>
+                    </div>
+                    <div>
+                        <div class="debug"></div>
+                    </div>
+                    <div>
+                        <div class="debug"></div>
+                    </div>
+                    <div>
+                        <div class="debug"></div>
+                    </div>
+                </div>
+            </div>
+         </section>
     </main>
+
+    <footer>
+        <div class="container py-4">
+            <div class="row mb-5">
+                <div class="col-12">
+                    <div class="debug">
+                        <h2>Logo ps</h2>
+                        <div class="d-flex align-items-center">
+                        <img style="height: 30px;" class="img-fluid d-inline" src="./img/language-globe.svg" alt="">
+                        <span class="ps-3">Country / Region: Italy</span>
+                        </div>
+                    </div>
+                </div>
+                 <div class="col-12">
+                    <div class="debug">
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                        <ul>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <img style="height: 60px;" src="./img/sie-logo.svg" alt="">
+                <p class="m-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ab eaque dolorem vel necessitatibus! Aut nobis rerum debitis iste ducimus itaque, sit sed quod iusto perferendis. Expedita dolor magni minima?</p>
+            </div>
+
+        </div>
+    </footer>
     
 
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>   
