Add contents to highlights and explore section

--- a/index.html
+++ b/index.html
@@ -55,32 +55,37 @@
         <!-- Sezione highlight -->
         <section id="highlight">
             <div class="highlight-jumbo">
-                <div class="container>">
-                    <div class="main-jumbo-contents">
-                      <!-- Qui inserisco i contenuti del jumbo -->
+                <div class="container">
+                    <div class="main-jumbo-contents text-white d-flex flex-column justify-content-end align-items-start pb-5">
+                      <img style="height: 50px;" src="./img/returnal-hero-banner-logo.png" alt="Returnal Game logo">
+                      <h3>Rompi il cerchio</h3>
+                      <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo
+                         thriller fantascientifico, disponibile in esclusiva su PS5.
+                      </p>
+                      <button class="btn rounded-5 btn-danger">Acquista ora</button>
                     </div>
                 </div>
             </div>
 
             <div class="container my-4">
-                <div class="row gy-4">
+                <div class="row g-4">
                     <div class="col-4">
-                        <div class="debug"></div>
+                        <img class="d-block img-fluid rounded-4 border border-2 border-primary img-thumbnail" src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
                     <div class="col-4">
-                        <div class="debug"></div>
+                        <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
                     <div class="col-4">
-                        <div class="debug"></div>
+                        <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
                     <div class="col-4">
-                        <div class="debug"></div>
+                       <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
                     <div class="col-4">
-                        <div class="debug"></div>
+                       <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
                     <div class="col-4">
-                        <div class="debug"></div>
+                        <img class="d-block img-fluid " src="./img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -89,9 +94,11 @@
         <!-- Sezione Discover -->
          <section id="discover">
             <div class="container my-4">
-                <h5>PLAY HAS NO LIMITS</h5>
-                <h2>Ecco la PlayStation 5</h2>
-                <p>Tuffati in nuove possibilità di gioco compeltamente inaspettate</p>
+                <div class="explore-titles text-center">
+                    <h5>PLAY HAS NO LIMITS</h5>
+                    <h2>Ecco la PlayStation 5</h2>
+                    <p>Tuffati in nuove possibilità di gioco compeltamente inaspettate</p>
+                </div>
 
                 <div class="row g-2">
                     <div class="col-12">
@@ -102,25 +109,25 @@
                         </div>
                     </div>
                     <div class="col-12">
-                        <div class="debug"></div>
+                        <img class="d-block img-fluid " src="img/playstation-5-thumb.png" alt="">
                     </div>
                 </div>
 
                 <div class="row g-2 my-4 ">
                     <div class="col-4">
-                        <div class="debug"></div>
+                        <img  class="d-block img-fluid " src="./img/playstation-5-thumb.png" alt="">
                     </div>
                     <div class="col-4">
-                        <div class="debug"></div>
+                        <img  class="d-block img-fluid " src="./img/joypad-thumb.png" alt="">
                     </div>
                     <div class="col-4">
-                        <div class="debug"></div>
+                        <img  class="d-block img-fluid " src="./img/headset-thumb.png" alt="">
                     </div>
                     <div class="col-4">
-                        <div class="debug"></div>
+                        <img  class="d-block img-fluid " src="./img/remote-thumb.png" alt="">
                     </div>
                     <div class="col-4">
-                        <div class="debug"></div>
+                        <img  class="d-block img-fluid " src="./img/camera-thumb.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -276,7 +283,7 @@
                     <div class="debug">
                         <h2>Logo ps</h2>
                         <div class="d-flex align-items-center">
-                        <img style="height: 30px;" class="img-fluid d-inline" src="./img/language-globe.svg" alt="">
+                        <img style="height: 30px;" src="./img/language-globe.svg" alt="">
                         <span class="ps-3">Country / Region: Italy</span>
                         </div>
                     </div>
