Add contents to new publications jumbo

--- a/index.html
+++ b/index.html
@@ -136,9 +136,14 @@
          <!-- Sezione nuove uscite -->
          <section id="new-publications" class="pb-4">
             <div class="new-publications-jumbo">
-                <div class="container>">
-                    <div class="new-publications-jumbo-contents">
-                      <!-- Qui inserisco i contenuti del jumbo -->
+                <div class="container">
+                    <div class="new-publications-jumbo-contents text-white d-flex flex-column justify-content-center align-items-start">
+                      <img style="height: 200px;" src="./img/it-takes-two-logo.png" alt="It takes two game logo">
+                      <h3>Rompi il cerchio</h3>
+                      <p>Rialzati dopo ogni sconfitta e affronta una nuova sfida con ogni rinascita in questo esplosivo
+                         thriller fantascientifico, disponibile in esclusiva su PS5.
+                      </p>
+                      <button class="btn rounded-5 btn-danger">Acquista ora</button>
                     </div>
                 </div>
             </div>
