--- a/index.html
+++ b/index.html
@@ -148,44 +148,58 @@
                 </div>
             </div>
 
-            <h3>Nuove uscite</h3>
-            <p>Giochi incredibili per PS4 e PS5 disponibili ora</p>
-            <div class="row g-2">
-                <div class="col-4">
-                    <div class="debug"></div>
-                </div>
-                <div class="col-4">
-                    <div class="debug"></div>
-                </div>
-                <div class="col-4">
-                    <div class="debug"></div>
-                </div>
-                <div class="col-4">
-                    <div class="debug"></div>
-                </div>
-                <div class="col-4">
-                    <div class="debug"></div>
-                </div>
-                <div class="col-4">
-                    <div class="debug"></div>
-                </div>
-                <div class="col-4">
-                    <div class="debug"></div>
-                </div>
-                <div class="col-4">
-                    <div class="debug"></div>
-                </div>
-                <div class="col-4">
-                    <div class="debug"></div>
-                </div>
-                <div class="col-4">
-                    <div class="debug"></div>
-                </div>
-                <div class="col-4">
-                    <div class="debug"></div>
-                </div>
-                <div class="col-4">
-                    <div class="debug"></div>
+            <div class="container text-white pt-3">
+                <h3>Nuove uscite</h3>
+                <p>Giochi incredibili per PS4 e PS5 disponibili ora</p>
+                <div class="row g-4 text-center">
+                    <div class="col-4">
+                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5>Crash Bandicoot 4: It's about time!</h5>
+                    </div>
+                    <div class="col-4">
+                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5>Crash Bandicoot 4: It's about time!</h5>
+                    </div>
+                    <div class="col-4">
+                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5>Crash Bandicoot 4: It's about time!</h5>
+                    </div>
+                    <div class="col-4">
+                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5>Crash Bandicoot 4: It's about time!</h5>
+                    </div>
+                    <div class="col-4">
+                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5>Crash Bandicoot 4: It's about time!</h5>
+                    </div>
+                    <div class="col-4">
+                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5>Crash Bandicoot 4: It's about time!</h5>
+                    </div>
+                    <div class="col-4">
+                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5>Crash Bandicoot 4: It's about time!</h5>
+                    </div>
+                    <div class="col-4">
+                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5>Crash Bandicoot 4: It's about time!</h5>
+                    </div>
+                    <div class="col-4">
+                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5>Crash Bandicoot 4: It's about time!</h5>
+                    </div>
+                    <div class="col-4">
+                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5>Crash Bandicoot 4: It's about time!</h5>
+                    </div>
+                    <div class="col-4">
+                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5>Crash Bandicoot 4: It's about time!</h5>
+                    </div>
+                    <div class="col-4">
+                        <img class="d-block img-fluid rounded-5" src="./img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5>Crash Bandicoot 4: It's about time!</h5>
+                    </div>
                 </div>
             </div>
          </section>
@@ -193,20 +207,31 @@
          <!-- Sezione Explora-->
          <section id="explore">
             <div class="container">
-                <h2>Esplora Playstation&copy; 4</h2>
-                <p>Giochi incredibili e intrattenimento senza fine.
-                Non c'è mai stato un momento migliore per giocare sulla tua PS4
-                </p>
+                <div class="text-center my-4">
+                    <h2>Esplora Playstation&copy; 4</h2>
+                    <p>Giochi incredibili e intrattenimento senza fine.
+                    Non c'è mai stato un momento migliore per giocare sulla tua PS4
+                    </p>
+                </div>
 
                 <div class="row g-4">
                     <div class="col-12">
-                        <div class="debug"></div>
+                        <img class="d-block img-fluid" src="./img/ps4-slim-homepage-image-block.jpg" alt="">
+                        <h3>PlayStation 3</h3>
+                        <p>Giochi incredibili live su PS4, con 1 TB di spazio di archiviazione</p>
+                        <button class="btn btn-primary rounded-4 ">Scopri di più</button>
                     </div>
                     <div class="col-12">
-                        <div class="debug"></div>
+                        <img class="d-block img-fluid" src="./img/double11-202010-tw-psvr.jpg" alt="">
+                        <h3>PlayStation VR</h3>
+                        <p>Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
+                        <button class="btn btn-primary rounded-4 ">Scopri di più</button>
                     </div>
                     <div class="col-12">
-                        <div class="debug"></div>
+                        <img class="d-block img-fluid" src="./img/dualshock-4-listing-thumb.jpg" alt="">
+                        <h3>Accessori</h3>
+                        <p>Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
+                        <button class="btn btn-primary rounded-4 ">Scopri di più</button>
                     </div>
                 </div>
             </div>
