Add contents to psplus jumbo

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                     </p>
                 </div>
 
-                <div class="row g-4">
+                <div class="row g-4 mb-4">
                     <div class="col-12">
                         <img class="d-block img-fluid" src="./img/ps4-slim-homepage-image-block.jpg" alt="">
                         <h3>PlayStation 3</h3>
@@ -238,17 +238,21 @@
          </section>
 
          <!-- Sezione PS-Plus-->
-         <section id="ps-plus">
+         <section id="ps-plus" class="mb-4">
             <div class="container">
-                <div class="row row-cols-2 g-0">
-                    <div>
-                        <div class="debug"></div>
+                    <div class="row row-cols-2">
+                        <div class="col-12 py-5 py-md-0">
+                            <img class="d-block img-fluid" src="./img/ps-plus-logo.png" alt="">
+                            <p class="m-0">Migliora la tua esperienza PLayStation con l'accesso a multigiocatore online,
+                                giochi mensili, sconti esclusivi e altro ancora.
+                            </p>
+                            <button class="btn btn-secondary rounded-4 mt-4">Scopri di più</button>
+                        </div>
+                        <div>
+                            <img class="d-none img-fluid" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt=""> <!-- L'immagine compare da md in poi-->
+                        </div>
                     </div>
-                    <div>
-                        <div class="debug"></div> <!-- L'immagine compare da md in poi-->
-                    </div>
-                </div>
-            </div>
+             </div>
          </section>
 
         <!-- Sezione sconti -->
