Add discount contents

--- a/index.html
+++ b/index.html
@@ -258,18 +258,20 @@
         <!-- Sezione sconti -->
          <section id="discount">
             <div class="container">
-                <h2>Nuovi sconti sul PlayStation Store</h2>
-                <p>Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto</p>
+                <div class="discount-titles text-center">
+                    <h2>Nuovi sconti sul PlayStation Store</h2>
+                    <p>Sconti pazzeschi, collezioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto</p>
+                </div>
 
-                <div class="row g-2">
+                <div class="row g-4 mb-4">
                     <div class="col-12">
-                        <div class="debug"></div>
+                        <img class="d-block img-fluid" src="./img/playstation-store-games-under-20-spotlight.jpg" alt="">
                     </div>
                     <div class="col-12">
-                        <div class="debug"></div>
+                        <img class="d-block img-fluid" src="./img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
                     </div>
                     <div class="col-12">
-                        <div class="debug"></div>
+                        <img class="d-block img-fluid" src="./img/playstation-store-free-to-play-spotlight.png" alt="">
                     </div>
                 </div>
             </div>
