--- a/index.html
+++ b/index.html
@@ -293,19 +293,20 @@
 
         <!-- Sezione Social media -->
          <section id="social-media">
-            <div class="container mb-4">
-                <div class="row row-cols-4">
-                    <div>
-                        <div class="debug"></div>
+            <div class="container mb-4 text-center">
+                <h3>Seguici sui social</h3>
+                <div class="row row-cols-4 gx-4 gy-5">
+                    <div class="col-6">
+                        <img class="d-block img-fluid" src="./img/twitter.jpg" alt="">
                     </div>
-                    <div>
-                        <div class="debug"></div>
+                    <div class="col-6">
+                        <img class="d-block img-fluid" src="./img/facebook.jpg" alt="">
                     </div>
-                    <div>
-                        <div class="debug"></div>
-                    </div>
-                    <div>
-                        <div class="debug"></div>
+                    <div class="col-6">
+                        <img class="d-block img-fluid" src="./img/instagram.jpg" alt="">
+                    </div> 
+                    <div class="col-6">
+                        <img class="d-block img-fluid" src="./img/youtube.png" alt="">
                     </div>
                 </div>
             </div>
