Add sticky header

--- a/index.html
+++ b/index.html
@@ -315,41 +315,37 @@
 
     <footer>
         <div class="container py-4">
-            <div class="row mb-5">
+            <div class="row mb-3">
                 <div class="col-12">
-                    <div class="debug">
-                        <h2>Logo ps</h2>
-                        <div class="d-flex align-items-center">
+                        <img class="d-block img-fluid" src="./img/ps-footer.svg" alt="">
+                        <div class="d-flex align-items-center my-5">
                         <img style="height: 30px;" src="./img/language-globe.svg" alt="">
                         <span class="ps-3">Country / Region: Italy</span>
-                        </div>
                     </div>
                 </div>
                  <div class="col-12">
-                    <div class="debug">
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Item</li>
+                            <li>Item</li>
+                            <li>Item</li>
+                            <li>Item</li>
                         </ul>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Item</li>
+                            <li>Item</li>
+                            <li>Item</li>
+                            <li>Item</li>
                         </ul>
                         <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li>Item</li>
+                            <li>Item</li>
+                            <li>Item</li>
+                            <li>Item</li>
                         </ul>
-                    </div>
                 </div>
             </div>
             <div>
-                <img style="height: 60px;" src="./img/sie-logo.svg" alt="">
+                <img class="d-block" style="height: 50px;" src="./img/sie-logo.svg" alt="">
                 <p class="m-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ab eaque dolorem vel necessitatibus! Aut nobis rerum debitis iste ducimus itaque, sit sed quod iusto perferendis. Expedita dolor magni minima?</p>
             </div>
 
