--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
 </head>
 <body>
 
-    <header>
+    <header class="sticky-top">
+        <div class="sony-bar d-flex justify-content-end">
+            <img style="height: 15px;" class="d-block img-fluid" src="img/sony_logo.svg" alt="">
+        </div>
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">
+                    <img class="d-block img-fluid" src="./img/play_logo.svg" alt="">
+                </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
                 </button>
@@ -94,7 +99,7 @@
         <!-- Sezione Discover -->
          <section id="discover">
             <div class="container my-4">
-                <div class="explore-titles text-center">
+                <div class="explore-titles text-center my-5">
                     <h5>PLAY HAS NO LIMITS</h5>
                     <h2>Ecco la PlayStation 5</h2>
                     <p>Tuffati in nuove possibilità di gioco compeltamente inaspettate</p>
@@ -102,10 +107,10 @@
 
                 <div class="row g-2">
                     <div class="col-12">
-                        <div class="debug">
+                        <div class="col-12">
                             <h2>Console PlayStation 5</h2>
                             <p>Sperimenta la nuova generazione di incredibili giochi PlayStation</p>
-                            <button class="btn btn-primary">Maggiori informazioni</button>
+                            <button class="btn btn-primary rounded-4">Maggiori informazioni</button>
                         </div>
                     </div>
                     <div class="col-12">
@@ -240,18 +245,16 @@
          <!-- Sezione PS-Plus-->
          <section id="ps-plus" class="mb-4">
             <div class="container">
-                    <div class="row row-cols-2">
-                        <div class="col-12 py-5 py-md-0">
-                            <img class="d-block img-fluid" src="./img/ps-plus-logo.png" alt="">
-                            <p class="m-0">Migliora la tua esperienza PLayStation con l'accesso a multigiocatore online,
-                                giochi mensili, sconti esclusivi e altro ancora.
-                            </p>
-                            <button class="btn btn-secondary rounded-4 mt-4">Scopri di più</button>
-                        </div>
-                        <div>
-                            <img class="d-none img-fluid" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt=""> <!-- L'immagine compare da md in poi-->
-                        </div>
+                    <div class="row row-cols-2 align-items-center">
+                    <div>
+                        <img class="d-block img-fluid" src="img/ps-plus-logo.png" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptates sit explicabo. Iusto, dolores quia pariatur officia ad omnis nihil!</p>
+                        <button class="btn btn-primary rounded-4">Scopri di più</button>
                     </div>
+                    <div>
+                        <img class="d-block img-fluid" src="./img/ps-plus-april-monthly-games-featured-image-block.png" alt=""> <!-- L'immagine compare da md in poi-->
+                    </div>
+                </div>
              </div>
          </section>
 
@@ -278,14 +281,16 @@
         </section>
 
         <!-- Sezione PS-Now -->
-        <section id="ps-now">
+        <section id="ps-now" class="text-white">
             <div class="container mb-4">
-                <div class="row row-cols-2 g-0 ">
+                <div class="row row-cols-2 align-items-center">
                     <div>
-                        <div class="debug"></div>
+                        <img class="d-block img-fluid" src="img/ps-now-logo-two-column.png" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis voluptates sit explicabo. Iusto, dolores quia pariatur officia ad omnis nihil!</p>
+                        <button class="btn btn-primary rounded-4">Scopri di più</button>
                     </div>
                     <div>
-                        <div class="debug"></div> <!-- L'immagine compare da md in poi-->
+                        <img class="d-block img-fluid" src="./img/ps-now-april-featured-image-block.png" alt=""> <!-- L'immagine compare da md in poi-->
                     </div>
                 </div>
             </div>
